[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/xp_counter/assets/lvl_bg.png" type="Texture" id=1]
[ext_resource path="res://ui/xp_counter/assets/bg.png" type="Texture" id=2]
[ext_resource path="res://ui/xp_counter/assets/bar.png" type="Texture" id=3]
[ext_resource path="res://ui/xp_counter/assets/bar_bg.png" type="Texture" id=4]
[ext_resource path="res://ui/assets/CheapProFonts - GeometrySoftPro-BoldN.otf" type="DynamicFontData" id=5]
[ext_resource path="res://ui/xp_counter/XPCounter.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 26
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 120
use_filter = true
font_data = ExtResource( 5 )

[node name="Control" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1120.0
margin_bottom = -830.0
rect_min_size = Vector2( 800, 250 )
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarContainer" type="AspectRatioContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 795.0
margin_bottom = 245.0
alignment_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="BarContainer"]
margin_left = 70.0
margin_right = 790.0
margin_bottom = 150.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarVBContainer" type="VBoxContainer" parent="BarContainer"]
margin_left = 130.0
margin_right = 790.0
margin_bottom = 141.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="BarMargin" type="MarginContainer" parent="BarContainer/BarVBContainer"]
margin_right = 660.0
margin_bottom = 110.0
size_flags_vertical = 0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="Bar" type="TextureProgress" parent="BarContainer/BarVBContainer/BarMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 650.0
margin_bottom = 110.0
size_flags_horizontal = 0
size_flags_vertical = 0
value = 85.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )

[node name="Label" type="Label" parent="BarContainer/BarVBContainer"]
margin_left = 282.0
margin_top = 114.0
margin_right = 377.0
margin_bottom = 141.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
text = "12/1234"

[node name="LevelARContainer" type="AspectRatioContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 205.0
margin_bottom = 245.0
size_flags_horizontal = 2
alignment_horizontal = 0
alignment_vertical = 2

[node name="LevelCContainer" type="CenterContainer" parent="LevelARContainer"]
margin_top = 40.0
margin_right = 200.0
margin_bottom = 240.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Background" type="TextureRect" parent="LevelARContainer/LevelCContainer"]
margin_right = 200.0
margin_bottom = 200.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="LevelARContainer/LevelCContainer"]
margin_left = 75.0
margin_top = 38.0
margin_right = 125.0
margin_bottom = 162.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0862745, 0.113725, 0.152941, 1 )
text = "1"

[node name="Tween" type="Tween" parent="."]
